# CAMP-seq

./: LICENSE  README.md  pixi.toml
downstream_analysis/all/: genebio_type_and_umis_genes.ipynb
downstream_analysis/barcode_rank/: barcode_rank.ipynb
downstream_analysis/cell_types/: cell_types.ipynb
downstream_analysis/mixed_sample/: species_cluster.ipynb  species_versus.ipynb
downstream_analysis/organ_types/: organ_types.ipynb
downstream_analysis/virus_homo/: data_converter.ipynb  velocity.ipynb  virus_DEA.ipynb
mylibs/: scAnalysis_util.py
mylibs/toolbox/: .gitignore  pyproject.toml
mylibs/toolbox/toolbox/: __init__.py  algo.py  fileio.py  util.py
ref/: rt8codes.fasta
upstream_analysis/0_starsolo_workflow_preprocess/: Snakefile  config.yaml  merge_fastq.py  patch.py  run_cutadapt.py
upstream_analysis/1_starsolo_workflow_map_count/: Snakefile  config.yaml  generate_whitelist.py  glance_virus.ipynb  mtx2h5ad.ipynb  run_starsolo.py  simple_stats.ipynb
